@@ -1,0 +1,25 @@
+
+Removing trailing traverses...
+
+Concatenating traverses...
+
+Simplifying network...
+
+Calculating network...
+
+Calculating traverses...
+
+Calculating trailing traverses...
+
+Calculating statistics...
+
+Survey contains 3 survey stations, joined by 2 legs.
+There are 0 loops.
+Total length of survey legs =  115.00m ( 115.00m adjusted)
+Total plan length of survey legs =  115.00m
+Total vertical length of survey legs =    0.00m
+Vertical range = 0.00m (from 3 at 0.00m to 3 at 0.00m)
+North-South range = 0.00m (from 3 at 0.00m to 1 at 0.00m)
+East-West range = 60.00m (from 3 at 60.00m to 1 at 0.00m)
+   2 1-nodes.
+   1 2-node.
