@@ -1,0 +1,4 @@
+( Easting, Northing, Altitude )
+(    0.00,     0.00,     0.00 ) 1
+(   55.00,     0.00,     0.00 ) 2
+(   60.00,     0.00,     0.00 ) 3
